Fix iOS and Safari layout issue

--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -35,6 +35,7 @@ body {
     align-items: flex-start;
 
     > div {
+        flex: 1;
         width: 100%;
         position: relative;
         top: 0;
